feat: 通过 Java API 实现 DSL